Adding maven compile plugin